// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Structure components ContentWrapper should render correctly with styles 1`] = `
.c0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
  max-height: 120px;
  overflow: auto;
  overflow-wrap: anywhere;
  padding: 0 2px 2px;
}

<div
  className="c0"
/>
`;

exports[`Structure components Description should render correctly with styles 1`] = `
.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-letter-spacing: -0.006rem;
  -moz-letter-spacing: -0.006rem;
  -ms-letter-spacing: -0.006rem;
  letter-spacing: -0.006rem;
  line-height: 1.25rem;
}

<div
  className="c0"
  data-id="TOAST_DESCRIPTION"
  data-test-id="TOAST_DESCRIPTION"
/>
`;

exports[`Structure components StructureWrapper should render correctly with styles 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  gap: 6px;
}

<div
  className="c0"
/>
`;

exports[`Structure components StructureWrapper should render correctly with styles for Novo 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  gap: 6px;
  margin: 8px 0 6px;
}

<div
  className="c0"
/>
`;

exports[`Structure components Title should render correctly with styles 1`] = `
.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  font-weight: 600;
  -webkit-letter-spacing: -0.006rem;
  -moz-letter-spacing: -0.006rem;
  -ms-letter-spacing: -0.006rem;
  letter-spacing: -0.006rem;
  line-height: 1.25rem;
}

<div
  className="c0"
  data-id="TOAST_TITLE"
  data-test-id="TOAST_TITLE"
/>
`;
